--- a/spring-boot/src/main/resources/public/css/projectForm.css
+++ b/spring-boot/src/main/resources/public/css/projectForm.css
@@ -173,3 +173,9 @@ div.input-zone {
 div.image-preview:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 900px) {
+    ul.remote-controller {
+        display: none;
+    }
+}
