--- a/spring-boot/src/main/resources/public/css/userForm.css
+++ b/spring-boot/src/main/resources/public/css/userForm.css
@@ -81,7 +81,7 @@ label.label-agree {
 
 input#agree {
     height: 20px;
-    margin: 0 0 0 10px;
+    margin: 2px 0 0 10px;
     padding: 0;
     width: 17px;
     vertical-align: top;
